--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MyHobbies"></activity>
+        <activity android:name=".EditData"></activity>
+        <activity android:name=".ListData" />
+        <activity android:name=".MyHobbies" />
         <activity android:name=".AddNewHobby" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".MainActivity" />
